[package]
name = "rumms-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.31.6", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "0.42", default-features = false, features = ["alloc"] }
esp-twai = { version = "0.1.0", path = "../esp-twai" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"

[features]
pio = ["esp-idf-sys/pio"]
